[tool.poetry]
name = "ah-api"
version = "0.1.0"
description = ""
authors = ["Jarco van Roest <jarco@elnino.tech>"]
readme = "README.md"
packages = [{include = "ah_api"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
dataclass-wizard = "^0.22.2"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
